// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading at level 1 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  component="h1"
  variant="h4"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 2 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  component="h2"
  variant="h5"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 3 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  component="h3"
  variant="h6"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 4 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  component="h4"
  variant="subtitle1"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 5 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  component="h5"
  variant="body2"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;

exports[`Heading at level 6 renders correctly 1`] = `
<WithStyles(ForwardRef(Typography))
  color="secondary"
  component="h6"
  variant="body2"
>
  <strong />
</WithStyles(ForwardRef(Typography))>
`;
